1.17.1 compat and java version things